Fix maven dependencies, add option to add drawing text 3 to filenames and fix bundling JRE into .exe file